; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_multixact.c_ReadNextMultiXactId.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_multixact.c_ReadNextMultiXactId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@MultiXactGenLock = common dso_local global i32 0, align 4
@LW_SHARED = common dso_local global i32 0, align 4
@MultiXactState = common dso_local global %struct.TYPE_2__* null, align 8
@FirstMultiXactId = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ReadNextMultiXactId() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @MultiXactGenLock, align 4
  %3 = load i32, i32* @LW_SHARED, align 4
  %4 = call i32 @LWLockAcquire(i32 %2, i32 %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @MultiXactState, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %1, align 8
  %8 = load i32, i32* @MultiXactGenLock, align 4
  %9 = call i32 @LWLockRelease(i32 %8)
  %10 = load i64, i64* %1, align 8
  %11 = load i64, i64* @FirstMultiXactId, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %0
  %14 = load i64, i64* @FirstMultiXactId, align 8
  store i64 %14, i64* %1, align 8
  br label %15

15:                                               ; preds = %13, %0
  %16 = load i64, i64* %1, align 8
  ret i64 %16
}

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i32 @LWLockRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
